[package]
name = "fall_gen"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]

[dependencies]
lazy_static= "0.2"
tera = "0.10"
elapsed = "0.1"
clap = "2.20"
regex = "0.2"
serde = "*"
serde_derive = "*"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-minihttp-server = { git = "https://github.com/paritytech/jsonrpc" }
fall_tree = { path = "../fall_tree" }
fall_parse = { path = "../fall_parse" }
file = { git = "https://github.com/matklad/rust-file", branch = "text" }

[dev-dependencies]
tempdir = "0.3"
difference = "1.0.0"
