[package]
name = "fall_gen"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]

[dependencies]
lazy_static= "0.2"
tera = "0.10"
elapsed = "0.1"
clap = "2.20"
regex = "0.2"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
fall_tree = { path = "../fall_tree" }
fall_parse = { path = "../fall_parse" }
file = "*"

[dev-dependencies]
tempdir = "0.3"
difference = "1.0.0"
