[package]
name = "fall_gen"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]

[dependencies]
tera = "0.10"
clap = "2.20"
regex = "0.2"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
file = "*"

fall_tree = { path = "../fall_tree" }
fall_parse = { path = "../fall_parse" }
lang_fall = { path = "../lang/fall" }

[dev-dependencies]
tempdir = "0.3"
difference = "1.0.0"
