[package]
name = "generic_backend"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"

[workspace]


[dependencies]
neon = "0.1.22"
serde = "1.0"
serde_derive = "1.0"
neon-serde = { git = "https://github.com/GabrielCastro/neon-serde", rev = "391a0b420eadfdb4e6d0ceef2a8cdf13ceb06143" }

fall_tree = { path = "../../fall/tree" }
fall_editor = { path = "../../fall/editor" }
