[package]
name = "backend"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"
build = "build.rs"

[workspace]

[lib]
name = "backend"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.15"

[dependencies]
neon = "0.1.15"
lazy_static = "0.2"
fall_tree = { path = "../../fall_tree" }
lang_fall = { path = "../../lang/fall" }
