[package]
name = "backend"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"
build = "build.rs"

[workspace]

[lib]
name = "backend"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.20"

[dependencies]
neon = "0.1.20"

serde = "1.0"
serde_derive = "1.0"
neon-serde = { git = "https://github.com/matklad/neon-serde", branch = "once-in-a-lifetime" }

lazy_static = "0.2.8"

fall_tree = { path = "../../fall/tree" }
fall_gen = { path = "../../fall/gen" }
lang_fall = { path = "../../lang/fall" }
