[package]
name = "backend"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"
build = "build.rs"

[workspace]

[lib]
name = "backend"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"

fall_editor = { path = "../../fall/editor" }

lang_fall = { path = "../../lang/fall" }
lang_rust = { path = "../../lang/rust" }
