[package]
name = "lang_fall"
version = "0.1.0"
edition = "2018"

[dependencies]
itertools = "0.7.4"
regex = "1"
self_cell = "0.8"
serde = "1.*"

fall_tree = { path = "../../fall/tree" }
fall_parse = { path = "../../fall/parse" }
fall_editor = { path = "../../fall/editor" }
lang_fall_syntax = { path = "./syntax" }
