[package]
name = "lang_rust"
version = "0.1.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
ordslice = "0.2.0"
file = "*"
elapsed = "*"
fst = "*"
log = "0.3"
simplelog = "*"
fall_tree = { path = "../../fall/tree" }
fall_parse = { path = "../../fall/parse" }
fall_editor = { path = "../../fall/editor" }
lang_rust_syntax =  { path = "./syntax" }
indxr = { path = "../../indxr" }
