[package]
name = "rust_backend"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"

[workspace]

[lib]
name = "rust_backend"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"
generic_backend = { path = "../../generic_backend" }
lang_rust = { path = "../../../lang/rust" }
fall_tree = { path = "../../../fall/tree" }
